# mesos

./: Makefile.am  configure.ac
contrib/mesos.xcodeproj/: project.pbxproj
contrib/peer.xcodeproj/: project.pbxproj
docs/: Makefile.am  external-containerizer.md  home.md
docs/assets/: ec_kill_seqdiag.diag  ec_launch_seqdiag.diag  ec_lifecycle_seqdiag.diag  ec_orphan_seqdiag.diag  ec_recover_seqdiag.diag
include/mesos/: mesos.proto
site/source/: index.html.md
src/: Makefile.am
src/examples/: test_containerizer.cpp  test_containerizer.proto
src/examples/python/: test_containerizer.py  test_framework.py
src/java/: MESOS-MAVEN-README
src/launcher/: fetcher.cpp
src/master/: http.cpp
src/python/: setup.py.in
src/slave/: flags.hpp  http.cpp  slave.cpp  slave.hpp
src/slave/containerizer/: containerizer.cpp  containerizer.proto  external_containerizer.cpp  external_containerizer.hpp  mesos_containerizer.cpp  pluggable_containerizer.cpp  pluggable_containerizer.hpp
src/slave/containerizer/mesos/: launch.cpp  main.cpp
src/tests/: api_tests.cpp  external_containerizer_test.cpp  launch.recordio.proto  mesos.cpp  mesos.hpp  pluggable_containerizer_test.cpp  script.cpp  slave_recovery_tests.cpp  test_containerizer.cpp  test_containerizer.proto
src/torrent/: peer.cpp  peer.hpp
support/: render_diags.sh
